--- a/frontend/app/views/app/index.scala.html
+++ b/frontend/app/views/app/index.scala.html
@@ -96,11 +96,22 @@
     var update = function(msg)
     {
         require(['angular'], function (angular) {
-            // Updates analyse service 
+            // Updates analyse service
             var service = angular.injector(['ng', 'myApp']).get("AnalyseService");
             service.update(msg);
         });
     }
+</script>
+
+<!-- Google Analyitics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68675928-1', 'auto');
+
 </script>
 
 </body>
